--- a/scss/_new_Arrivals.scss
+++ b/scss/_new_Arrivals.scss
@@ -11,16 +11,19 @@
     .sectionCard{
         margin-bottom: 70px;
         .cardProducts{
-            width: 25%;
+            width: 250%;
             position: relative;
-            // clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-            transition: clip-path 0.3s ease;
             .article1{
                 .smallCard{
                     display:none;
                 }
                 #outFit{
                     width: 100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -98,6 +101,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -184,6 +192,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -270,6 +283,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -356,6 +374,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -442,6 +465,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -528,6 +556,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -614,6 +647,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -700,6 +738,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
@@ -786,6 +829,11 @@
                 }
                 #outFit{
                     width:100%;
+                    height: 100%;
+                    transition:all 0.3s ease;
+                    &:hover{
+                        filter: blur(2px) grayscale(60%);
+                    }
                 }
                 .new{
                     display: none;
