--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -1,66 +1,151 @@
 .getOff{
     width:100%;
     height: 100%;
-    // background-color: rgb(16, 16, 16);
     background-image: url("../img/background_Gift.webp");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 200px 0px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top:100px;
-    padding-bottom: 100px;
-    .info{
+    .containerGetOff{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding-top:100px;
+        padding-bottom: 100px;
+        .info{
+            .title{
+                font-size:4rem;
+                font-family: $fontRubik;
+                color: #BC2327;
+                margin-top: -150px;
+            }
+            .paragraph{
+                margin-top: 50px;
+                .subtitle, .sentence, .cta{
+                    font-size:1.8rem;
+                    font-family: $fontJura;
+                    font-weight: 600;
+                    color: #D9D9D9;
+                }
+                .sentence{
+                    font-size:1.5rem;
+                }
+            }
+            .cta{
+                width:45px;
+                // font-size:1rem;
+                // font-family: $fontJura;
+                // font-weight: 600;
+                // color: #E0E0E0;
+                // transition: color .3s;
+                // &:hover{
+                //     color: #8a8a8a;
+                // }
+            }
+            #cross{
+                display: none;
+                &:checked ~ .bannerGetOff{
+                    transform: translateY(100%);
+                }
+            }
+        }
+        .hoddy{
+            animation: hoddy 2s linear 2s infinite;
+            @keyframes hoddy {
+                0%{
+                    filter: drop-shadow(0 0 1px #BC2327);
+                }
+                25%{
+                    filter: drop-shadow(0 1px 2px #BC2327);
+                }
+                50%{
+                    filter: drop-shadow(0 2px 3px #BC2327);
+                }
+                75%{
+                    filter: drop-shadow(0 3px 5px #BC2327);
+                }
+                100%{
+                    filter: drop-shadow(0 4px 6px #BC2327);
+                }
+            }
+        }
+    }
+    .bannerGetOff{
+        width: 62vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10px;
+        box-shadow: 0 0 6px 4px black;
+        position: fixed;
+        top:-380px;
+        left:18%;
+        z-index: 10;
+        transform: translateY(210%);
+        overflow: hidden;
+        transition: .3s ease-in-out;
         .title{
             font-size:4rem;
             font-family: $fontRubik;
             color: #BC2327;
-            margin-top: -200px;
+            margin: 40px auto;
         }
-        .paragraph{
-            margin-top: 100px;
-            .subtitle, .sentence, .cta{
-                font-size:1.8rem;
-                font-family: $fontJura;
-                font-weight: 600;
-                color: #D9D9D9;
-            }
-            .sentence{
-                font-size:1.5rem;
-            }
+        .crossCloseWhite{
+            width:25px;
+            position: absolute;
+            bottom:100px;
+            left:710px;
+            z-index: 8;
         }
-        .cta{
-            font-size:1rem;
-            font-family: $fontJura;
-            font-weight: 600;
-            color: #E0E0E0;
-            transition: color .3s;
-            &:hover{
-                color: #8a8a8a;
+        .slideGetOff{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 20px;
+            backdrop-filter: blur(10px);
+            .hoddy{
+                padding:10px;
+                img{
+                    width:100%;
+                    height:auto;
+                }
+                h3{
+                    margin-top: 30px;
+                    font-size:1.1rem;
+                    font-family: $fontJura;
+                    color: #BC2327;
+                }
+                p{
+                    padding: 10px auto;
+                    font-size:1rem;
+                    font-family: $fontJura;
+                    color: #d9d9d9;
+                }
             }
         }
     }
-    .hoddy{
-        animation: hoddy 2s linear 2s infinite;
-        @keyframes hoddy {
-            0%{
-                filter: drop-shadow(0 0 1px #BC2327);
-            }
-            25%{
-                filter: drop-shadow(0 1px 2px #BC2327);
-            }
-            50%{
-                filter: drop-shadow(0 2px 3px #BC2327);
-            }
-            75%{
-                filter: drop-shadow(0 3px 5px #BC2327);
-            }
-            100%{
-                filter: drop-shadow(0 4px 6px #BC2327);
-            }
-        }
+    .bannerGetOff::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color:#000000e5;
+        backdrop-filter: blur(10px);
+        filter: blur(10px);
+        z-index: -1;
+        border-radius: 10px;
+    }
+    .bannerGetOff > * {
+        position: relative;
     }
 }
