--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #E0E0E0;
-  transition: color 0.3s;
+  transition: color 0.3s ease;
 }
 .getOff .ctaSentence:hover {
   color: #8a8a8a;
@@ -611,6 +611,9 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   align-items: flex-start;
   color: #D9D9D9;
   padding: 10px;
+}
+.bestSellers .sectionCard .cardProducts .info .heartIcon {
+  align-self: self-end;
 }
 .bestSellers .sectionCard .cardProducts .info .linkStore {
   width: 100%;
