Change name store for bestSellers & make store category

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,8 @@
 @import "_get_Off";
 @import "_advertising";
 @import "_gift_Card";
-@import "_Store";
+@import "_best_Sellers";
+@import "_store";
 @import "_my_Cart";
 @import "_new_Arrivals";
 @import "_order_Purchase";
