--- a/views/store.html
+++ b/views/store.html
@@ -27,7 +27,52 @@
 </head>
 <body>
 
+    <!-- Header -->
 
+    <header class="header">
+        <input id="menuSide" type="checkbox">
+        <label for="menuSide">
+            <img class="drawerIcon" src="../img/menu_Icon.svg" alt="Menu icon">
+        </label>
+        <a class="logo" href="../index.html">
+            <img class="brand" src="../img/skullLogo.svg" alt="Break a Leg brand">
+        </a>
+        <section class="menuIcons">
+            <ul>
+                <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
+                <li><a href="sign_In.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon" src="../img/whishlist_White_Icon.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon" src="../img/empty_Shopping_Cart.svg" alt=""></a></li>
+            </ul>
+        </section>
+        <nav class="menuSide">
+            <section class="top">
+                <img class="brand" src="../img/skullLogo.svg" alt="Break a Leg brand">
+                <label for="menuSide">
+                    <img class="close" src="../img/close_Arrow.svg" alt="Close icon">
+                </label>
+            </section>
+            <section class="menu">
+                <ul>
+                    <li><a href="sign_In.html" class="link">Sign in</a></li>
+                    <li><a href="#" class="link">My cart</a></li>
+                    <li><a href="../index.html" class="link">Home</a></li>
+                    <li><a href="store.html" class="link">Store</a></li>
+                    <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
+                </ul>
+            </section>
+            <section class="contactUs">
+                <p>Contact us...</p>
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="../img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </section>
+        </nav>
+    </header>
 
     <!-- Bootstrap -->
 
