--- a/views/store.html
+++ b/views/store.html
@@ -74,6 +74,46 @@
         </nav>
     </header>
 
+    <!-- Main -->
+
+    <main class="mainContainer">
+
+
+    </main>
+
+    <!-- Footer -->
+
+    <footer class="footerContainer">
+        <div class="footer">
+            <section class="socialMedia">
+                <h3 class="contactUs">Contact us..</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="../img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </section>
+            <section class="brand">
+                <h3 class="nameLogo">Break a Leg</h3>
+                <img src="../img/skull.svg" alt="Skull logo" class="skull">
+            </section>
+            <section class="payments">
+                <h3>Payments</h3>
+                <img class="paymentCards" src="../img/payments.webp" alt="Credit cards">
+            </section>
+        </div>
+        <section class="development">
+            <img class="raccoon" src="../img/logo_Raccoon.svg" alt="Raccoon brand">
+            <div class="developer">
+                <p>Developed and made with 💖 by Diego Marin </p>
+                <p>© 2023 Raccoon. All rights reserved.</p>
+                <p> Medellin - Colombia</p>
+            </div>
+        </section>
+    </footer>
+
     <!-- Bootstrap -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
