--- a/views/store.html
+++ b/views/store.html
@@ -76,8 +76,234 @@
 
     <!-- Main -->
 
+    <section class="arrowUp">
+        <a href="index.html#heroSection" class="directionUp">
+            <img src="img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
+        </a>
+    </section>
+
+    <!-- Skull SocialMedia -->
+
+    <section class="skullSocialMedia">
+        <article class="socialMedia">
+            <img src="img/skull.svg" alt="" class="skullIcon">
+            <ul>
+                <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
+                <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
+                <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
+            </ul>
+        </article>
+    </section>
+
+
     <main class="mainContainer">
 
+        <!-- Filter -->
+
+        <section class="filter">
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
+
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdroped with scrolling</h5>
+                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+        </section>
+
+        <secion class="cart">
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                ...
+            </div>
+            </div>
+        </secion>
+
+        <section class="whishList">
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                ...
+            </div>
+            </div>
+        </section>
+
+        <!-- Store -->
+
+        <section class="containerStore">
+            <div class="sectionCard d-flex flex-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic1.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="#" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic2.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic15.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic16.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic5.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic6.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic22.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic8.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic25.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic18.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+            <div class="sectionCard g-1 d-flex flex-row">
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic11.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic24.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic13.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic14.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+                <article class="cardProducts m-2">
+                    <dic class="article">
+                        <img src="../img/pic37.webp" alt="Outfit Image" class="outFit">
+                        <div class="info">
+                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <p class="price">Outfit.................................$499</p>
+                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                        </div>
+                    </dic>
+                </article>
+            </div>
+        </section>
 
     </main>
 
