--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -19,6 +19,11 @@
             }
             .outFit{
                 width:100%;
+                filter: grayscale(0%);
+                transition: filter 0.3s ease;
+                &:hover{
+                    filter: grayscale(100%);
+                }
             }
             .info{
                 display: flex;
