--- a/css/main.css
+++ b/css/main.css
@@ -595,42 +595,67 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin-bottom: 100px;
 }
 .bestSellers .sectionCard .cardProducts {
+  width: 250px;
+  height: auto;
   cursor: pointer;
   overflow: hidden;
   transition: all 0.3s ease;
 }
 .bestSellers .sectionCard .cardProducts:hover {
-  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  box-shadow: 0 0 10px 2px #707070;
 }
-.bestSellers .sectionCard .cardProducts .outFit {
+.bestSellers .sectionCard .cardProducts .article {
   width: 100%;
-  filter: grayscale(0%);
-  transition: filter 0.3s ease;
+  height: 100%;
 }
-.bestSellers .sectionCard .cardProducts .outFit:hover {
+.bestSellers .sectionCard .cardProducts .article:hover > .outFit {
+  transform: scale(110%);
   filter: grayscale(100%);
+  box-shadow: 0 0 4px 2px #707070;
 }
-.bestSellers .sectionCard .cardProducts .info {
+.bestSellers .sectionCard .cardProducts .article .info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   color: #D9D9D9;
+  font-weight: 400;
+  margin-top: 20px;
   padding: 10px;
+  background-color: rgba(19, 19, 19, 0.8235294118);
+  transform: translateY(-115%);
+  transition: transform 0.3s ease;
 }
-.bestSellers .sectionCard .cardProducts .info .heartIcon {
+.bestSellers .sectionCard .cardProducts .article .info .heartIcon {
   align-self: self-end;
 }
-.bestSellers .sectionCard .cardProducts .info .linkStore {
+.bestSellers .sectionCard .cardProducts .article .info .linkStore {
   width: 100%;
   text-align: center;
   padding: 5px;
   color: #D9D9D9;
+  font-weight: 500;
   background-color: #BC2327;
   text-decoration: none;
   transition: all 0.3s ease;
 }
-.bestSellers .sectionCard .cardProducts .info .linkStore:hover {
-  background-color: #3d3d3d;
+.bestSellers .sectionCard .cardProducts .article .info .linkStore:hover {
+  color: #BC2327;
+  background-color: #D9D9D9;
+  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+}
+.bestSellers .sectionCard .cardProducts .article .outFit {
+  width: inherit;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  vertical-align: middle;
+  filter: grayscale(20%);
+  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  transition: all 0.3s ease;
+}
+.bestSellers .sectionCard .cardProducts .article .outFit:hover > .info {
+  filter: grayscale(100%);
 }
 .bestSellers .ctaStore {
   display: flex;
