--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -52,7 +52,7 @@
                         &:hover{
                             color: #BC2327;
                             background-color: #D9D9D9;
-                            box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+                            box-shadow: 0 0 4px 2px #BC2327;
                         }
                     }
                 }
