--- a/css/main.css
+++ b/css/main.css
@@ -602,11 +602,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease;
 }
 .bestSellers .sectionCard .cardProducts:hover {
-  box-shadow: 0 0 10px 2px #707070;
+  box-shadow: 0 0 4px 2px #707070;
 }
 .bestSellers .sectionCard .cardProducts .article {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .bestSellers .sectionCard .cardProducts .article:hover > .outFit {
   transform: scale(110%);
@@ -622,7 +623,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin-top: 20px;
   padding: 20px;
   background-color: rgba(19, 19, 19, 0.8235294118);
-  transform: translateY(-115%);
+  transform: translateY(-110%);
   transition: transform 0.3s ease;
 }
 .bestSellers .sectionCard .cardProducts .article .info .heartIcon {
