--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -16,11 +16,12 @@
             overflow: hidden;
             transition: all 0.3s ease;
             &:hover{
-                box-shadow: 0 0 10px 2px #707070;
+                box-shadow: 0 0 4px 2px #707070;
             }
             .article{
                 width:100%;
                 height:100%;
+                overflow: hidden;
                 &:hover > .outFit{
                     transform:scale(110%);
                     filter: grayscale(100%);
@@ -35,7 +36,7 @@
                     margin-top: 20px;
                     padding:20px;
                     background-color: #131313d2;
-                    transform: translateY(-115%);
+                    transform: translateY(-110%);
                     transition: transform 0.3s ease;
                     .heartIcon{
                         align-self: self-end;
