--- a/css/main.css
+++ b/css/main.css
@@ -680,44 +680,85 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   height: auto;
   margin: 150px auto;
 }
-.containerStore .sectionCard {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0px auto;
-}
 .containerStore .sectionCard .cardProducts {
+  width: 250px;
+  height: auto;
   cursor: pointer;
   overflow: hidden;
   transition: all 0.3s ease;
 }
 .containerStore .sectionCard .cardProducts:hover {
-  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  box-shadow: 0 0 4px 2px #707070;
 }
-.containerStore .sectionCard .cardProducts .outFit {
+.containerStore .sectionCard .cardProducts .article {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
-.containerStore .sectionCard .cardProducts .info {
+.containerStore .sectionCard .cardProducts .article:hover > .outFit {
+  transform: scale(110%);
+  filter: grayscale(100%);
+  box-shadow: 0 0 4px 2px #707070;
+}
+.containerStore .sectionCard .cardProducts .article .info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   color: #D9D9D9;
-  padding: 10px;
+  font-weight: 400;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: rgba(19, 19, 19, 0.8235294118);
+  transform: translateY(-110%);
+  transition: transform 0.3s ease;
 }
-.containerStore .sectionCard .cardProducts .info .heartIcon {
+.containerStore .sectionCard .cardProducts .article .info .heartIcon {
   align-self: self-end;
 }
-.containerStore .sectionCard .cardProducts .info .linkStore {
+.containerStore .sectionCard .cardProducts .article .info .linkStore {
   width: 100%;
   text-align: center;
   padding: 5px;
   color: #D9D9D9;
+  font-weight: 500;
   background-color: #BC2327;
   text-decoration: none;
   transition: all 0.3s ease;
 }
-.containerStore .sectionCard .cardProducts .info .linkStore:hover {
-  background-color: #3d3d3d;
+.containerStore .sectionCard .cardProducts .article .info .linkStore:hover {
+  color: #BC2327;
+  background-color: #D9D9D9;
+  box-shadow: 0 0 4px 2px #BC2327;
+}
+.containerStore .sectionCard .cardProducts .article .outFit {
+  width: inherit;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  vertical-align: middle;
+  filter: grayscale(20%);
+  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  transition: all 0.3s ease;
+}
+.containerStore .sectionCard .cardProducts .article .outFit:hover > .info {
+  filter: grayscale(100%);
+}
+.containerStore .ctaStore {
+  display: flex;
+  justify-content: center;
+  margin: 70px auto 0px;
+  width: 200px;
+  padding: 20px 40px;
+  color: #d9d9d9;
+  background-color: #3f3f3f;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+.containerStore .ctaStore:hover {
+  background-color: #BC2327;
+  box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+  text-decoration: underline;
 }
 
 .newArrivals {
