--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -3,45 +3,85 @@
     height: auto;
     margin: 150px auto;
     .sectionCard{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        // display: grid;
-        // grid-template-columns: repeat(4, 1fr) ;
-        // grid-template-rows: repeat(3, 1fr);
-        margin: 0px auto;
         .cardProducts{
+            width:250px;
+            height:auto;
             cursor: pointer;
             overflow: hidden;
             transition: all 0.3s ease;
             &:hover{
-                box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+                box-shadow: 0 0 4px 2px #707070;
             }
-            .outFit{
+            .article{
                 width:100%;
-            }
-            .info{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                color: #D9D9D9;
-                padding:10px;
-                .heartIcon{
-                    align-self: self-end;
+                height:100%;
+                overflow: hidden;
+                &:hover > .outFit{
+                    transform:scale(110%);
+                    filter: grayscale(100%);
+                    box-shadow: 0 0 4px 2px #707070;
                 }
-                .linkStore{
-                    width: 100%;
-                    text-align: center;
-                    padding: 5px;
+                .info{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
                     color: #D9D9D9;
-                    background-color: #BC2327;
-                    text-decoration: none;
+                    font-weight: 400;
+                    margin-top: 20px;
+                    padding:20px;
+                    background-color: #131313d2;
+                    transform: translateY(-110%);
+                    transition: transform 0.3s ease;
+                    .heartIcon{
+                        align-self: self-end;
+                    }
+                    .linkStore{
+                        width: 100%;
+                        text-align: center;
+                        padding: 5px;
+                        color: #D9D9D9;
+                        font-weight: 500;
+                        background-color: #BC2327;
+                        text-decoration: none;
+                        transition: all 0.3s ease;
+                        &:hover{
+                            color: #BC2327;
+                            background-color: #D9D9D9;
+                            box-shadow: 0 0 4px 2px #BC2327;
+                        }
+                    }
+                }
+                .outFit{
+                    width:inherit;
+                    max-width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                    vertical-align: middle;
+                    filter: grayscale(20%);
+                    box-shadow: 0 0 4px 2px rgb(112, 112, 112);
                     transition: all 0.3s ease;
-                    &:hover{
-                        background-color: #3d3d3d;
+                    &:hover > .info{
+                        filter: grayscale(100%);
                     }
                 }
             }
+        }
+    }
+    .ctaStore{
+        display:flex;
+        justify-content: center;
+        margin: 70px auto 0px;
+        width: 200px;
+        padding:20px 40px;
+        color:#d9d9d9;
+        background-color: #3f3f3f;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        &:hover{
+            background-color:#BC2327 ;
+            box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+            text-decoration: underline;
         }
     }
 }
