--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,7 +29,7 @@
                 align-items: flex-start;
                 margin-left: -40px;
                 padding-top: 10px;
-                border-top: 1px solid rgb(61, 61, 61);
+                // border-top: 1px solid rgb(61, 61, 61);
                 li{
                     list-style-type: none;
                     .item{
@@ -78,7 +78,7 @@
                 width: 55%;
                 align-self: flex-end;
                 padding-top: 10px;
-                border-top: 1px solid rgb(61, 61, 61);
+                // border-top: 1px solid rgb(61, 61, 61);
             }
         }
     }
